--- a/ImageBrowse/MainActivity/res/values/strings.xml
+++ b/ImageBrowse/MainActivity/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">ImageBrowse</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title">使用XML布局文件控制UI界面</string>
+    <string name="start">单击开始游戏.....</string>
 
 </resources>
